# get-proxy

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
getproxy/: __init__.py  __main__.py  check.py  cli.py  fetch.py  menu.py  ops.py  proxy.py  sources.py  store.py  tui.py  ui.py
tests/: test_check.py  test_cli.py  test_fetch.py  test_ops.py  test_proxy.py  test_store.py
